做了些修改和小优化